# algpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
alglab/: algorithm.py  experiment.py
algpy/: algorithm.py  dataset.py  evaluation.py  experiment.py  results.py
examples/: simple.py
examples/results/: twomoonsresults.csv
tests/: test_algorithm.py  test_datasets.py  test_evaluation.py  test_experiments.py  twomoonsresults.csv
tests/results/: results.csv  twomoonsresults.csv
