[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "algpy"
version = "0.0.1"
authors = [
  { name="Peter Macgregor", email="prm4@st-andrews.ac.uk" },
]
description = "A package for running experiments on algorithms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pmacg/algpy"
Issues = "https://github.com/pmacg/algpy/issues"
